[feat] 화장실 상세 정보 조회 API 개발
