# src/main/java/io/seorin/ddongkan/biz/ToiletController.java
@@ -5,6 +5,7 @@ import java.util.List;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
@@ -32,5 +33,12 @@ public class ToiletController {
 		var responses = result.stream().map(ToiletResponse::from).toList();
 		return new ResponseEntity<>(responses, HttpStatus.OK);
 
+	}
+
+	@GetMapping("/{id}")
+	public ResponseEntity<ToiletResponse> getToiletById(@PathVariable("id") Long id) {
+		var toilet = this.toiletService.getToiletById(id);
+		var response = ToiletResponse.from(toilet);
+		return new ResponseEntity<>(response, HttpStatus.OK);
 	}
 }
