# src/main/resources/static/swagger-ui/openapi3.yaml
@@ -78,8 +78,71 @@ paths:
                     :37.5259,\"lng\":126.927,\"openHours\":\"05:00-23:00\",\"accessible\"\
                     :true,\"diaper\":true,\"unisex\":false,\"avgRating\":4,\"avgCleanliness\"\
                     :4}]"
+  /api/v1/toilets/{id}:
+    get:
+      tags:
+      - api
+      summary: Retrieve detailed information about a specific toilet by its ID.
+      description: Retrieve detailed information about a specific toilet by its ID.
+      operationId: get-toilet-by-id
+      parameters:
+      - name: id
+        in: path
+        description: Unique identifier of the toilet.
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/api-v1-toilets-id1088392552"
+              examples:
+                get-toilet-by-id:
+                  value: "{\"id\":12,\"name\":\"서울역 2F 화장실\",\"address\":\"서울 중구 한\
+                    강대로 405\",\"lat\":37.5547,\"lng\":126.9706,\"openHours\":\"06:00-23:00\"\
+                    ,\"accessible\":true,\"diaper\":true,\"unisex\":false,\"avgRating\"\
+                    :4,\"avgCleanliness\":4}"
 components:
   schemas:
+    api-v1-toilets-id1088392552:
+      type: object
+      properties:
+        unisex:
+          type: boolean
+          description: Indicates if the toilet is unisex.
+        openHours:
+          type: string
+          description: Operating hours of the toilet.
+        accessible:
+          type: boolean
+          description: Indicates if the toilet is accessible for disabled individuals.
+        address:
+          type: string
+          description: Address of the toilet.
+        lng:
+          type: number
+          description: Longitude of the toilet.
+        name:
+          type: string
+          description: Name of the toilet.
+        avgRating:
+          type: number
+          description: Average overall rating of the toilet.
+        diaper:
+          type: boolean
+          description: Indicates if the toilet has a diaper changing station.
+        id:
+          type: number
+          description: Unique identifier of the toilet.
+        lat:
+          type: number
+          description: Latitude of the toilet.
+        avgCleanliness:
+          type: number
+          description: Average cleanliness rating of the toilet.
     api-v1-toilets1928741375:
       type: array
       description: List of nearby toilets.
